RESOLVED FIXED17668
Vertical scrollbar at slashdot.org is randomly not shown
https://bugs.webkit.org/show_bug.cgi?id=17668
Summary Vertical scrollbar at slashdot.org is randomly not shown
Ismail Donmez
Reported 2008-03-04 08:30:36 PST
Using r30747. How to reproduce: - Go to http://slashdot.org Results: - There is no vertical scrollbar Expected Results: - A Vertical scrollbar is shown
Attachments
Ismail Donmez
Comment 1 2008-03-04 08:39:04 PST
Reliably reproducible at http://filoxus.blogspot.com/2008/03/reddit-alien-in-latex.html and even in WebKit Bugzilla :-)
Darin Adler
Comment 2 2008-03-04 09:25:44 PST
Committed revision 30755.
Note You need to log in before you can comment on or make changes to this bug.