        Reviewed by Adam.

- fix 200+ failing regression tests
        - fix http://bugs.webkit.org/show_bug.cgi?id=17668
          Vertical scrollbar at slashdot.org is randomly not shown

        * WebCoreSupport/WebFrameLoaderClient.mm:
        (WebFrameLoaderClient::transitionToCommittedForNewPage): Changed the refcounting
        code here to exactly match the way it was before it was moved from WebCore. I had
        introduced a storage leak and that was causing problems with scroll bars!



Canonical link: https://commits.webkit.org/24443@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30755 268f45cc-cd09-0410-ab3c-d52691b4dbfc